new tests and remove fitness goals